fix text align

--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -54,6 +54,10 @@
 #description {
   margin-top: 5rem;
   margin-bottom: 5rem;
+  p, h2, li {
+    text-align: left;
+  }
+
   img {
     width: 100%;
   }
